CMAPI2-423 Fix pattern issues
